--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@google-cloud/text-to-speech": "^6.4.0",
     "@google/generative-ai": "^0.24.1",
     "lucide-react": "^0.554.0",
-    "next": "16.0.3",
+    "next": "^16.1.1",
     "openai": "^6.9.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
